# finemark

./: AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-MIT  ParseResult.json  README.md  target.fm
.github/: FUNDING.yml
.github/workflows/: bench.yml  docs-build.yml  docs-check.yml  test.yml
crates/finemark-ast/: Cargo.toml  README.md
crates/finemark-ast/src/: elements.rs  lib.rs  span.rs
crates/finemark-ast/src/elements/: block.rs  inline.rs  leaf.rs  list.rs  mod.rs  parameter.rs  table.rs  text_style.rs
crates/finemark-parser/: Cargo.toml  README.md
crates/finemark-parser/benches/: parser.rs
crates/finemark-parser/examples/: benchmark.rs  gen_expected.rs  parse.rs
crates/finemark-parser/src/: context.rs  core.rs  error.rs  lib.rs
crates/finemark-parser/src/parser/: block.rs  code.rs  document.rs  element.rs  input_source.rs  mod.rs
crates/finemark-parser/src/parser/at/: at_comment.rs  at_heading.rs  at_hline.rs  at_link.rs  at_list.rs  at_quote.rs  at_table.rs  mod.rs  utils.rs
crates/finemark-parser/src/parser/code/: code_block.rs  mod.rs
crates/finemark-parser/src/parser/comment/: inline_comment.rs  mod.rs  multiline_comment.rs
crates/finemark-parser/src/parser/escape/: escape.rs  mod.rs
crates/finemark-parser/src/parser/macro/: macro_br.rs  mod.rs
crates/finemark-parser/src/parser/markdown/: markdown_blockquote.rs  markdown_bold.rs  markdown_header.rs  markdown_hline.rs  markdown_inline_code.rs  markdown_italic.rs  markdown_list.rs  markdown_strikethrough.rs  markdown_subscript.rs  markdown_superscript.rs  markdown_tex.rs  markdown_underline.rs  mod.rs  utils.rs
crates/finemark-parser/src/parser/newline/: mod.rs  newline.rs  paragraph_break.rs
crates/finemark-parser/src/parser/parameter/: mod.rs  parameter_content.rs  parameter_core.rs  parameter_text.rs
crates/finemark-parser/src/parser/text/: mod.rs  text.rs
crates/finemark-parser/src/parser/token/: mod.rs  token_asterisk.rs  token_at.rs  token_backslash.rs  token_caret.rs  token_comma.rs  token_dollar.rs  token_newline.rs  token_slash.rs  token_tilde.rs  token_undescore.rs
crates/finemark-parser/src/parser/utils/: mod.rs  utils_delimited_body.rs  utils_line.rs  utils_raw_block.rs  utils_recursion_depth.rs
crates/finemark-parser/tests/: at_commands.rs  code.rs  escape_and_text.rs  inline_markdown.rs  parameters.rs  parser_fixtures.rs
crates/finemark-parser/tests/fixtures/parser/at/expected/: basic.json  table.json
crates/finemark-parser/tests/fixtures/parser/at/input/: basic.fm  table.fm
crates/finemark-parser/tests/fixtures/parser/inline/expected/: styles.json
crates/finemark-parser/tests/fixtures/parser/inline/input/: styles.fm
finemark-docs/: README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  wrangler.jsonc
xtask/: Cargo.toml
xtask/src/: main.rs
