[workspace]
members = ["crates/*", "xtask"]
resolver = "3"

[workspace.package]
version = "0.1.0"
authors = ["Levi Laine <shiueo.csh@gmail.com>"]
repository = "https://github.com/FineMark/finemark"
description = "Write structured documents, cleanly."
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.95.0"
keywords = ["markup", "parser", "markdown", "ast", "finemark"]
categories = ["parsing", "text-processing"]
readme = "README.md"

[workspace.dependencies]
# Internal crates
finemark-ast = {path = "crates/finemark-ast"}
finemark-parser = { path = "crates/finemark-parser" }

# External dependencies
winnow = { version = "1.0.3", features = ["simd"] }
paste = "1.0.15"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
memchr = "2.8.0"