[workspace]
members = ["crates/*", "xtask"]
resolver = "3"

[workspace.package]
version = "0.1.1"
authors = ["Levi Laine <shiueo.csh@gmail.com>"]
repository = "https://github.com/FineMark/finemark"
description = "Write structured documents, cleanly."
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.95.0"
keywords = ["markup", "parser", "markdown", "ast", "finemark"]
categories = ["parsing", "text-processing"]
readme = "README.md"

[workspace.dependencies]
# Internal crates
finemark-ast = { path = "crates/finemark-ast", version = "0.1.1" }
finemark-parser = { path = "crates/finemark-parser", version = "0.1.1" }

# External dependencies
winnow = { version = "1.0.3", features = ["simd"] }
paste = "1.0.15"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
memchr = "2.8.0"
indexmap = { version = "2.14.0", features = ["serde"] }
maud = "0.27.0"
pretty = "0.12.5"

[profile.dev]
opt-level = 1