[package]
name = "finemark-parser"
version.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core parsing engine for the FineMark markup language"
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
# Internal crates
finemark-ast.workspace = true

# External dependencies
winnow.workspace = true
paste.workspace = true
serde_json.workspace = true
memchr.workspace = true

[dev-dependencies]
criterion.workspace = true

[features]
default = []
include-locations = ["finemark-ast/include-locations"]

[[example]]
name = "gen_expected"
required-features = ["include-locations"]

[[bench]]
name = "parser"
harness = false

[[test]]
name = "parser_fixtures"
required-features = ["include-locations"]
